--- a/QQMusicPlayer/QQMusicPlayer/Player/Controller/AudioPlayerController.xib
+++ b/QQMusicPlayer/QQMusicPlayer/Player/Controller/AudioPlayerController.xib
@@ -12,6 +12,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AudioPlayerController">
             <connections>
+                <outlet property="lrcLabel" destination="N7S-V8-sgJ" id="OAi-aR-PC6"/>
+                <outlet property="lrcView" destination="h57-Nl-Qzf" id="ioc-gu-EHl"/>
                 <outlet property="maxTime" destination="OrN-Gs-b4F" id="GEy-1a-tHd"/>
                 <outlet property="modeButton" destination="dQM-f9-vyL" id="x0o-Tw-b9C"/>
                 <outlet property="paceSlider" destination="253-s6-NbK" id="6sf-Ec-4io"/>
@@ -42,13 +44,13 @@
                         <action selector="disMissSelfClick:" destination="-1" eventType="touchUpInside" id="vbx-FH-0Wv"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Cy-lF-uQa">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Cy-lF-uQa">
                     <rect key="frame" x="331" y="20" width="44" height="44"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="44" id="NMY-yd-vxD"/>
                         <constraint firstAttribute="width" constant="44" id="SS9-zF-vRE"/>
                     </constraints>
-                    <state key="normal" title="---">
+                    <state key="normal" image="MusicPlayer_分享.png">
                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
@@ -68,7 +70,7 @@
                     <rect key="frame" x="0.0" y="567" width="375" height="100"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="za4-Z5-IzC">
-                            <rect key="frame" x="153.5" y="16" width="68" height="68"/>
+                            <rect key="frame" x="154" y="16" width="68" height="68"/>
                             <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="68" id="0QH-pW-BAM"/>
@@ -80,7 +82,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oOE-ei-cJP">
-                            <rect key="frame" x="91.5" y="28" width="44" height="44"/>
+                            <rect key="frame" x="92" y="28" width="44" height="44"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="R68-EH-JVd"/>
                                 <constraint firstAttribute="width" constant="44" id="unP-pg-Vda"/>
@@ -91,7 +93,7 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AXd-Yd-GhR">
-                            <rect key="frame" x="239.5" y="28" width="44" height="44"/>
+                            <rect key="frame" x="240" y="28" width="44" height="44"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="44" id="pDC-PU-VXW"/>
                                 <constraint firstAttribute="height" constant="44" id="qOy-Ns-3ph"/>
@@ -102,10 +104,10 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dQM-f9-vyL">
-                            <rect key="frame" x="38.5" y="32" width="35" height="35"/>
+                            <rect key="frame" x="24" y="25.5" width="50" height="50"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="35" id="HYx-TW-6Fg"/>
-                                <constraint firstAttribute="width" constant="35" id="xkf-KS-3Ps"/>
+                                <constraint firstAttribute="height" constant="50" id="HYx-TW-6Fg"/>
+                                <constraint firstAttribute="width" constant="50" id="xkf-KS-3Ps"/>
                             </constraints>
                             <state key="normal" image="MusicPlayer_顺序播放.png"/>
                             <connections>
@@ -113,10 +115,10 @@
                             </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CS1-UV-ELI">
-                            <rect key="frame" x="301.5" y="33" width="35" height="35"/>
+                            <rect key="frame" x="302" y="25.5" width="50" height="50"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="35" id="NRW-xt-SBR"/>
-                                <constraint firstAttribute="height" constant="35" id="dd7-04-kcS"/>
+                                <constraint firstAttribute="width" constant="50" id="NRW-xt-SBR"/>
+                                <constraint firstAttribute="height" constant="50" id="dd7-04-kcS"/>
                             </constraints>
                             <state key="normal" image="MusicPlayer_下载.png"/>
                             <connections>
@@ -164,7 +166,7 @@
                         </label>
                         <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="253-s6-NbK">
                             <rect key="frame" x="58" y="0.0" width="259" height="17"/>
-                            <color key="minimumTrackTintColor" red="0.0" green="0.74704461348684215" blue="0.2827742714" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="minimumTrackTintColor" red="0.13333333333333333" green="0.54509803921568623" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <color key="maximumTrackTintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <connections>
                                 <action selector="changeSlider:" destination="-1" eventType="valueChanged" id="q4x-Rb-haL"/>
@@ -187,7 +189,7 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Singer" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7pa-HH-xPK">
-                    <rect key="frame" x="166" y="64" width="44.5" height="18"/>
+                    <rect key="frame" x="165" y="64" width="45" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
@@ -201,13 +203,25 @@
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wKZ-ME-88Q">
-                    <rect key="frame" x="135" y="73" width="20.5" height="1"/>
+                    <rect key="frame" x="135" y="73" width="20" height="1"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="UMa-Xd-yNR"/>
                         <constraint firstAttribute="width" constant="20" id="pKk-6t-rwm"/>
                     </constraints>
                 </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="这是一行歌词" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N7S-V8-sgJ" customClass="XMGLrcLabel">
+                    <rect key="frame" x="15" y="511" width="345" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="9p3-ce-k2Z"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h57-Nl-Qzf" customClass="XMGLrcView">
+                    <rect key="frame" x="0.0" y="92" width="375" height="449"/>
+                </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -216,40 +230,48 @@
                 <constraint firstItem="7pa-HH-xPK" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="5Tb-0X-FtA"/>
                 <constraint firstItem="R7K-y7-xfe" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="71k-AW-ZB2"/>
                 <constraint firstAttribute="bottom" secondItem="R7K-y7-xfe" secondAttribute="bottom" id="74i-LQ-KSR"/>
+                <constraint firstItem="h57-Nl-Qzf" firstAttribute="top" secondItem="7pa-HH-xPK" secondAttribute="bottom" constant="10" id="903-pi-ayK"/>
                 <constraint firstAttribute="trailing" secondItem="0Gw-Sj-mc0" secondAttribute="trailing" id="9cK-IX-0cM"/>
+                <constraint firstAttribute="trailing" secondItem="h57-Nl-Qzf" secondAttribute="trailing" id="Bvz-Em-AST"/>
                 <constraint firstItem="lph-2h-INS" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="CNg-RT-RGl"/>
                 <constraint firstItem="0Gw-Sj-mc0" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="D2m-Wc-SoZ"/>
+                <constraint firstItem="Vke-Cs-ubq" firstAttribute="top" secondItem="h57-Nl-Qzf" secondAttribute="bottom" constant="10" id="H7V-fw-oat"/>
+                <constraint firstItem="Vke-Cs-ubq" firstAttribute="top" secondItem="N7S-V8-sgJ" secondAttribute="bottom" constant="10" id="HTs-is-bTa"/>
                 <constraint firstAttribute="trailing" secondItem="Vke-Cs-ubq" secondAttribute="trailing" id="Hbj-aI-AKo"/>
                 <constraint firstItem="I9Z-vx-Mfu" firstAttribute="leading" secondItem="lph-2h-INS" secondAttribute="trailing" constant="5" id="IQa-vB-n0D"/>
                 <constraint firstAttribute="trailing" secondItem="R7K-y7-xfe" secondAttribute="trailing" id="Igs-ch-CKp"/>
+                <constraint firstAttribute="trailing" secondItem="N7S-V8-sgJ" secondAttribute="trailing" constant="15" id="KYd-FC-RfG"/>
                 <constraint firstItem="7iK-we-RJ8" firstAttribute="leading" secondItem="7pa-HH-xPK" secondAttribute="trailing" constant="10" id="Lp5-MQ-l1w"/>
                 <constraint firstAttribute="bottom" secondItem="0Gw-Sj-mc0" secondAttribute="bottom" id="Mfs-Y1-Eaa"/>
                 <constraint firstItem="2Cy-lF-uQa" firstAttribute="leading" secondItem="I9Z-vx-Mfu" secondAttribute="trailing" constant="5" id="PVe-WI-tLs"/>
                 <constraint firstItem="I9Z-vx-Mfu" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="20" id="Q0F-5T-6jt"/>
                 <constraint firstItem="7pa-HH-xPK" firstAttribute="leading" secondItem="wKZ-ME-88Q" secondAttribute="trailing" constant="10" id="WEf-fn-dwO"/>
                 <constraint firstItem="7pa-HH-xPK" firstAttribute="top" secondItem="I9Z-vx-Mfu" secondAttribute="bottom" id="ZyL-CG-LnR"/>
+                <constraint firstItem="N7S-V8-sgJ" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="aK3-Dm-Kdm"/>
                 <constraint firstItem="0Gw-Sj-mc0" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="aVT-rZ-lD5"/>
                 <constraint firstItem="7iK-we-RJ8" firstAttribute="top" secondItem="I9Z-vx-Mfu" secondAttribute="bottom" constant="9.5" id="bvx-cw-vOy"/>
                 <constraint firstItem="7pa-HH-xPK" firstAttribute="width" relation="lessThanOrEqual" secondItem="0Gw-Sj-mc0" secondAttribute="width" multiplier="0.7" id="bwT-JE-z22"/>
                 <constraint firstItem="wKZ-ME-88Q" firstAttribute="top" secondItem="I9Z-vx-Mfu" secondAttribute="bottom" constant="9.5" id="fS6-QW-euf"/>
                 <constraint firstAttribute="trailing" secondItem="0Gw-Sj-mc0" secondAttribute="trailing" id="sfe-xd-HGB"/>
                 <constraint firstItem="Vke-Cs-ubq" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="vNa-4x-jXF"/>
+                <constraint firstItem="h57-Nl-Qzf" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="vTC-N1-k6y"/>
                 <constraint firstItem="0Gw-Sj-mc0" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="vtI-UD-b9Y"/>
                 <constraint firstAttribute="trailing" secondItem="2Cy-lF-uQa" secondAttribute="trailing" id="w91-Ud-dL9"/>
                 <constraint firstItem="R7K-y7-xfe" firstAttribute="top" secondItem="Vke-Cs-ubq" secondAttribute="bottom" id="waM-db-Wj1"/>
                 <constraint firstAttribute="bottom" secondItem="0Gw-Sj-mc0" secondAttribute="bottom" id="wwx-Dx-QWl"/>
                 <constraint firstItem="0Gw-Sj-mc0" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="zZ2-YA-dQ6"/>
             </constraints>
-            <point key="canvasLocation" x="-648" y="158"/>
+            <point key="canvasLocation" x="-648.5" y="157.5"/>
         </view>
     </objects>
     <resources>
         <image name="MusicPlayer_上一个.png" width="40" height="40"/>
         <image name="MusicPlayer_下一个.png" width="40" height="40"/>
         <image name="MusicPlayer_下载.png" width="23" height="21"/>
+        <image name="MusicPlayer_分享.png" width="50" height="50"/>
         <image name="MusicPlayer_后退.png" width="27" height="27"/>
         <image name="MusicPlayer_暂停.png" width="68" height="68"/>
-        <image name="MusicPlayer_顺序播放.png" width="17" height="19"/>
+        <image name="MusicPlayer_顺序播放.png" width="50" height="50"/>
         <image name="音乐_播放器_默认模糊背景.png" width="375" height="667"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
