--- a/QQMusicPlayer/QQMusicPlayer/Base.lproj/Main.storyboard
+++ b/QQMusicPlayer/QQMusicPlayer/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="trF-Mg-vSq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -12,7 +12,7 @@
         <!--AudioPlayerTest-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -39,35 +39,11 @@
                             <constraint firstItem="S67-AR-GWa" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lXM-Tp-FpF"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="AudioPlayerTest" id="VqX-iU-jSa">
-                        <barButtonItem key="rightBarButtonItem" title="播放器" id="T0u-q7-EzJ">
-                            <connections>
-                                <action selector="showPlayer:" destination="BYZ-38-t0r" id="Mrj-Xx-QxO"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="AudioPlayerTest" id="VqX-iU-jSa"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1149.5999999999999" y="-572.56371814092961"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="Kob-c1-47U">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="trF-Mg-vSq" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Lgy-5f-HXL">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="fve-IT-qKC"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ivC-0T-krJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="420" y="-572"/>
+            <point key="canvasLocation" x="-343" y="-866"/>
         </scene>
     </scenes>
 </document>
